--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-.body{
+body{
     background-color: #ebe5d1;
     margin: 0;
     padding: 0;
@@ -9,6 +9,7 @@
     font-size: 100%;
     font-family: inherit;
     vertical-align: baseline;}
+
 a{
     color: black;
     text-decoration: none;
@@ -19,6 +20,7 @@ a{
 .header{
     background-color:#FFCD4B;
     padding: 5px;
+    flex-direction: row;
 }
 .footer{
     background-color: #4C4D54;
@@ -26,9 +28,14 @@ a{
     padding: 5px;
 }
 main {
-    padding: 2em;
+    padding: 1em;
 }
-.xd{
+
+.menu{
+    text-align: center;
+}
+
+.recuadro{
     background-color: white;
     padding: 1em;
     margin-bottom: 2em;
@@ -74,7 +81,6 @@ main {
     border-radius: 4px;
 }
 
-/* Flex Direction */
 .direction-row {
     flex-direction: row;
 }
@@ -83,7 +89,6 @@ main {
     flex-direction: column;
 }
 
-/* Justify Content */
 .justify-start {
     justify-content: flex-start;
 }
@@ -104,7 +109,6 @@ main {
     justify-content: space-around;
 }
 
-/* Align Items */
 .align-start {
     align-items: flex-start;
 }
@@ -125,7 +129,6 @@ main {
     align-items: stretch;
 }
 
-/* Flex Wrap */
 .wrap {
     flex-wrap: wrap;
 }
@@ -134,7 +137,6 @@ main {
     flex-wrap: nowrap;
 }
 
-/* Align Content */
 .align-content-start {
     align-content: flex-start;
 }
@@ -155,7 +157,6 @@ main {
     align-content: space-around;
 }
 
-/* Order and Flex Grow */
 .order-1 {
     order: 1;
 }
@@ -180,11 +181,10 @@ main {
     flex-grow: 3;
 }
 
-/* Custom styles for tall boxes */
 .tall {
     height: 100px;
 }
 
 .container.align-content-start, .container.align-content-end, .container.align-content-center, .container.align-content-space-between, .container.align-content-space-around, .container.align-content-stretch {
-    height: 200px; /* Adjust as necessary to see the effect */
+    height: 200px; 
 }
