--- a/pets.net/css/style.css
+++ b/pets.net/css/style.css
@@ -7,8 +7,17 @@ body{
     font-weight: inherit;
     font-style: inherit;
     font-size: 100%;
-    font-family: inherit;
+    font-family: Arial;
     vertical-align: baseline;}
+
+.header-container {
+    display: flex;
+    align-items: center; 
+}
+
+.header-container a {
+    margin-right: 15px; 
+}
 
 a{
     color: black;
@@ -37,8 +46,6 @@ main {
     justify-content: center;
     background-color: #FFCD4B;
     padding: 10px;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }  
 
 .botones{
@@ -46,8 +53,9 @@ main {
     color: black;
     font-weight: bold;
     text-transform: uppercase;
-    font-size: 16px;
-    padding: 10px 20px; 
+    font-family: Arial;
+    font-size: 15px;
+    padding: 1px 2px; 
 }
 
 .recuadro{
